Table users {
  id          text [primary key, not null]
  username    text [not null]
  email       text [not null]
  created_at  timestamp [default: now()]
}

Table todos {
  id           text [primary key, not null]
  user_id      text [not null, ref: > users.id]
  title        text [not null]
  isCompleted  boolean [default: false]
  created_at   timestamp [default: now()]
  updated_at   timestamp [default: now()]
}

Table userTodos {
  user_id  text [not null, ref: > users.id]
  todo_id  text [not null, ref: > todos.id]
  indexes {
    (user_id, todo_id) [primary key]
  }
}
